# stm32

./: .gitignore  ARCHITECTURE_COMPLETE.md  COIN_PUSHER_USAGE.md  Cargo.toml  MAIN_MIGRATION_GUIDE.md  NET_README.md  PROTOBUF_USAGE.md  QEMU_TEST.md  QEMU_TEST_REPORT.md  SERIAL_TRANSPORT_GUIDE.md  SIMPLE_TCP_USAGE.md  TCP_SERVER_USAGE.md  architect.md  build.rs  examples_tcp_usage.md  qemu-run.sh  run_qemu.sh
.cargo/: config-qemu.toml
examples/: test_codec.rs
proto/: coin_pusher.proto
src/: error.rs  event.rs  main.rs  main_original.rs  messages.rs.old
src/app/: mod.rs  router.rs  types.rs
src/app/handlers/: button.rs  coin.rs  fault.rs  heartbeat.rs  misc.rs  mod.rs  motor.rs  network.rs  ping.rs
src/drivers/: button.rs  hw_init.rs  led.rs  mock_button.rs  mock_hw.rs  mod.rs  sensor.rs
src/net/: codec.rs  connection.rs  events.rs  manager.rs  mod.rs  packet.rs  router.rs  serial_transport.rs  tcp_server.rs
src/tasks/: button_task.rs  dispatch_task.rs  heartbeat_task.rs  mod.rs  network_task.rs
src/utils/: mod.rs
