[package]
name = "stm32"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["executor-thread", "arch-cortex-m", "defmt" ]}
embassy-stm32 = { version = "0.4.0", features = [ "memory-x", "time-driver-any", "unstable-pac", "exti", "stm32f407zg" ]}
embassy-time = { version = "0.5", features = [ "tick-hz-32_768", "defmt" ] }
cortex-m = { version = "0.7.6", features = [ "critical-section-single-core" ] }
cortex-m-rt = { version = "0.7.0"}
panic-probe = { version = "1.0", features = [ "print-defmt" ]}
defmt = { version = "1.0" }
defmt-rtt = { version = "1.0"}
prost = { version = "0.14.1", default-features = false, features = ["derive"] }