[package]
name = "stm32"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-alloc = "0.6"
embassy-executor = { version = "0.9.1", features = ["executor-thread", "arch-cortex-m", "defmt" ]}
embassy-stm32 = { version = "0.4.0", features = [ "memory-x", "time-driver-any", "unstable-pac", "exti", "stm32f407zg" ]}
embassy-time = { version = "0.5", features = [ "tick-hz-32_768", "defmt" ] }
embassy-net = { version = "0.7.1", features = [ "defmt", "tcp", "dhcpv4", "medium-ethernet" ] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.7.2" }
cortex-m = { version = "0.7.6", features = [ "critical-section-single-core" ] }
cortex-m-rt = { version = "0.7.0"}
panic-probe = { version = "1.0", features = [ "print-defmt" ]}
defmt = { version = "1.0" }
defmt-rtt = { version = "1.0"}
heapless = { version = "0.9.2" }
hash32 = "0.3"
static_cell = { version = "2.1" }
byteorder = { version = "1.5", default-features = false }
prost = { version = "0.13", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.13", default-features = false }

[build-dependencies]
prost-build = "0.13"